build fix for nexus-security